# meta-agent-framework

./: .env.example  .gitignore  README.md  codebase_context.md  pyproject.toml
.github/workflows/: ci.yml
infra/: Dockerfile  docker-compose.yml  prometheus.yml
infra/k8s/: deployment.yaml
src/meta_agent/: __init__.py  config.py
src/meta_agent/agents/: __init__.py  base_agent.py  factory.py
src/meta_agent/agents/specialized/: __init__.py  coding_agent.py  critic_agent.py  data_analysis_agent.py  extractor_agent.py  planning_agent.py  research_agent.py  summarization_agent.py  verification_agent.py
src/meta_agent/api/: __init__.py  main.py  middleware.py
src/meta_agent/api/routes/: agents.py  blueprints.py  health.py  tasks.py
src/meta_agent/benchmarks/: __init__.py  metrics_collector.py  runner.py
src/meta_agent/benchmarks/suites/: __init__.py  benchmark_tasks.py
src/meta_agent/core/: __init__.py  blueprint_generator.py  meta_agent.py  planner.py
src/meta_agent/evaluation/: __init__.py  evaluator.py  repair_loop.py
src/meta_agent/memory/: __init__.py  context_manager.py  long_term.py  short_term.py
src/meta_agent/observability/: __init__.py  logging_config.py  metrics.py  tracing.py
src/meta_agent/orchestration/: __init__.py  graph_builder.py  graph_executor.py  router.py
src/meta_agent/schemas/: __init__.py  blueprint.py  state.py
src/meta_agent/tools/: __init__.py  base_tool.py  registry.py
src/meta_agent/tools/implementations/: __init__.py  api_caller.py  code_executor.py  database_query.py  file_reader.py  vector_retrieval.py  web_search.py
tests/: test_agents.py  test_api.py  test_graph_builder.py  test_pipeline_fixes.py  test_schemas.py
